--- a/woocommerce.css
+++ b/woocommerce.css
@@ -60,34 +60,34 @@
 /*--------------------------------------------------------------
 # WooCommerce Buttons
 --------------------------------------------------------------*/
-.woocommerce #respond input#submit.disabled,
-.woocommerce #respond input#submit:disabled,
-.woocommerce #respond input#submit:disabled[disabled],
-.woocommerce a.button.disabled,
-.woocommerce a.button:disabled,
-.woocommerce a.button:disabled[disabled],
-.woocommerce button.button.disabled,
-.woocommerce button.button:disabled,
-.woocommerce button.button:disabled[disabled],
-.woocommerce input.button.disabled,
-.woocommerce input.button:disabled,
-.woocommerce input.button:disabled[disabled] {
+.woocommerce.woocommerce-page #respond input#submit.alt.disabled,
+.woocommerce.woocommerce-page #respond input#submit.alt:disabled,
+.woocommerce.woocommerce-page #respond input#submit.alt:disabled[disabled],
+.woocommerce.woocommerce-page a.button.alt.disabled,
+.woocommerce.woocommerce-page a.button.alt:disabled,
+.woocommerce.woocommerce-page a.button.alt:disabled[disabled],
+.woocommerce.woocommerce-page button.button.alt.disabled,
+.woocommerce.woocommerce-page button.button.alt:disabled,
+.woocommerce.woocommerce-page button.button.alt:disabled[disabled],
+.woocommerce.woocommerce-page input.button.alt.disabled,
+.woocommerce.woocommerce-page input.button.alt:disabled,
+.woocommerce.woocommerce-page input.button.alt:disabled[disabled] {
   background-color: #24c48a;
   border: 1px solid #24c48a;
   color: #fff;
   padding: 1em 1.923em; }
-  .woocommerce #respond input#submit.disabled:hover,
-  .woocommerce #respond input#submit:disabled:hover,
-  .woocommerce #respond input#submit:disabled[disabled]:hover,
-  .woocommerce a.button.disabled:hover,
-  .woocommerce a.button:disabled:hover,
-  .woocommerce a.button:disabled[disabled]:hover,
-  .woocommerce button.button.disabled:hover,
-  .woocommerce button.button:disabled:hover,
-  .woocommerce button.button:disabled[disabled]:hover,
-  .woocommerce input.button.disabled:hover,
-  .woocommerce input.button:disabled:hover,
-  .woocommerce input.button:disabled[disabled]:hover {
+  .woocommerce.woocommerce-page #respond input#submit.alt.disabled:hover,
+  .woocommerce.woocommerce-page #respond input#submit.alt:disabled:hover,
+  .woocommerce.woocommerce-page #respond input#submit.alt:disabled[disabled]:hover,
+  .woocommerce.woocommerce-page a.button.alt.disabled:hover,
+  .woocommerce.woocommerce-page a.button.alt:disabled:hover,
+  .woocommerce.woocommerce-page a.button.alt:disabled[disabled]:hover,
+  .woocommerce.woocommerce-page button.button.alt.disabled:hover,
+  .woocommerce.woocommerce-page button.button.alt:disabled:hover,
+  .woocommerce.woocommerce-page button.button.alt:disabled[disabled]:hover,
+  .woocommerce.woocommerce-page input.button.alt.disabled:hover,
+  .woocommerce.woocommerce-page input.button.alt:disabled:hover,
+  .woocommerce.woocommerce-page input.button.alt:disabled[disabled]:hover {
     color: #fff; }
 
 .woocommerce a.button,
