--- a/sass/woocommerce/_cart.scss
+++ b/sass/woocommerce/_cart.scss
@@ -354,5 +354,120 @@
 				}
 			}
 		}
+
+		.shopping-cart-dropdown {
+			width: 300px;
+
+			.mini_cart_item a {
+				white-space: normal;
+			}
+		}
+	}
+}
+
+.widget_shopping_cart_content {
+	padding: 20px;
+
+	.cart_list{
+		.empty {
+			margin: 15px 15px;
+		}
+
+		.mini_cart_item {
+			position: relative;
+			margin: 0 0 15px 0;
+			box-sizing: border-box;
+
+			a {
+				margin: 0;
+				padding: 0 0 15px 0 !important;;
+			}
+
+			.mini_cart_img {
+				width: 64px;
+
+				img {
+					vertical-align: middle;
+				}
+			}
+
+			.mini_cart_details {
+				margin-left: 80px;
+				position: absolute;
+				top: 0;
+
+				.mini_cart_product {
+					line-height: 1.5em;
+					margin: 0 0 7px 0;
+					color: $color__text-dark;
+				}
+
+				.mini_cart_cost {
+					margin: 0;
+					color: $color__primary-accent;
+				}
+			}
+
+			&:last-child {
+				margin-bottom: 0;
+			}
+		}
+	}
+
+	.total {
+		border-top: none !important;
+		margin: 10px 0 0 0;
+		padding: 5px 0 !important;
+		font-size: 13px;
+
+		strong {
+			font-weight: normal;
+		}
+
+		span {
+			font-weight: bold;
+		}
+	}
+
+	.buttons {
+		text-align: center;
+		text-transform: uppercase;
+		margin: 10px 0 0 0;
+		padding-top: 0;
+
+		a {
+			font-weight: normal;
+			border-radius: 0px;
+			font-size: 12px;
+			padding: 10px;
+			line-height: 1em;
+			box-shadow: inset 0 0 1px rgba(0, 0, 0, 0.25);
+			font-family: $font__headings;
+			text-decoration: none;
+			text-transform: uppercase;
+			text-shadow: none;
+			@include transition(0.085s);
+			min-width: inherit;
+			width: 49%;
+
+			&.mini_cart_view {
+				background: transparent;
+				border: 1px solid $color__text-dark;
+				color: $color__text-dark;
+			}
+
+			&.mini_cart_checkout {
+				background: $color__primary-accent;
+				border: 1px solid $color__primary-accent;
+				color: #fff;
+			}
+
+			&:hover {
+				background: $color__primary-accent-dark;
+				color: #fff;
+				border-color: $color__primary-accent-dark;
+				box-shadow: none;
+			}
+		}
 	}
 }
