--- a/woocommerce.css
+++ b/woocommerce.css
@@ -1007,6 +1007,7 @@
     .main-navigation .shopping-cart .shopping-cart-link .svg-icon-cart path {
       fill: #626262; }
   .main-navigation .shopping-cart .shopping-cart-dropdown {
+    top: 36px;
     width: 300px; }
     .main-navigation .shopping-cart .shopping-cart-dropdown .mini_cart_item a {
       white-space: normal; }
@@ -1016,9 +1017,9 @@
   .widget_shopping_cart_content .cart_list .empty {
     margin: 15px 15px; }
   .widget_shopping_cart_content .cart_list .mini_cart_item {
-    position: relative;
+    box-sizing: border-box;
     margin: 0 0 15px 0;
-    box-sizing: border-box; }
+    position: relative; }
     .widget_shopping_cart_content .cart_list .mini_cart_item a {
       margin: 0;
       padding: 0 0 15px 0 !important; }
@@ -1031,47 +1032,47 @@
       position: absolute;
       top: 0; }
       .widget_shopping_cart_content .cart_list .mini_cart_item .mini_cart_details .mini_cart_product {
+        color: #2d2d2d;
         line-height: 1.5em;
-        margin: 0 0 7px 0;
-        color: #2d2d2d; }
+        margin: 0 0 7px 0; }
       .widget_shopping_cart_content .cart_list .mini_cart_item .mini_cart_details .mini_cart_cost {
-        margin: 0;
-        color: #24c48a; }
+        margin: 0; }
+        .widget_shopping_cart_content .cart_list .mini_cart_item .mini_cart_details .mini_cart_cost .amount {
+          color: #24c48a; }
     .widget_shopping_cart_content .cart_list .mini_cart_item:last-child {
       margin-bottom: 0; }
   .widget_shopping_cart_content .total {
     border-top: none !important;
+    font-size: 13px;
     margin: 10px 0 0 0;
-    padding: 5px 0 !important;
-    font-size: 13px; }
+    padding: 5px 0 !important; }
     .widget_shopping_cart_content .total strong {
       font-weight: normal; }
     .widget_shopping_cart_content .total span {
       font-weight: bold; }
   .widget_shopping_cart_content .buttons {
-    text-align: center;
-    text-transform: uppercase;
     margin: 10px 0 0 0;
-    padding-top: 0; }
+    padding-top: 0;
+    text-align: center;
+    text-transform: uppercase; }
     .widget_shopping_cart_content .buttons a {
-      font-weight: normal;
-      border-radius: 0px;
-      font-size: 12px;
-      padding: 10px;
-      line-height: 1em;
-      box-shadow: inset 0 0 1px rgba(0, 0, 0, 0.25);
-      font-family: "Merriweather", serif;
-      text-decoration: none;
-      text-transform: uppercase;
-      text-shadow: none;
       -webkit-transition: 0.085s;
       -moz-transition: 0.085s;
       transition: 0.085s;
+      border-radius: 0px;
+      font-family: "Merriweather", serif;
+      font-size: 12px;
+      font-weight: normal;
+      line-height: 1;
       min-width: inherit;
+      padding: 10px;
+      text-decoration: none;
+      text-shadow: none;
+      text-transform: uppercase;
       width: 49%; }
       .widget_shopping_cart_content .buttons a.mini_cart_view {
         background: transparent;
-        border: 1px solid #2d2d2d;
+        border: 2px solid #dadada;
         color: #2d2d2d; }
       .widget_shopping_cart_content .buttons a.mini_cart_checkout {
         background: #24c48a;
@@ -1079,9 +1080,8 @@
         color: #fff; }
       .widget_shopping_cart_content .buttons a:hover {
         background: #00a76a;
-        color: #fff;
         border-color: #00a76a;
-        box-shadow: none; }
+        color: #fff; }
 
 /*--------------------------------------------------------------
 # WooCommerce Widgets
