--- a/sass/woocommerce/_layout.scss
+++ b/sass/woocommerce/_layout.scss
@@ -14,6 +14,11 @@
 		margin: 0;
 		width: auto;
 	}
+
+	@at-root .shop-sidebar-right#{&} {
+		float: left;
+		margin: 0 (-$size__site-sidebar) 0 0;
+	}
 }
 
 .woocommerce-page .container {
@@ -38,6 +43,18 @@
 	.shop-widgets.widget-area {
 		float: left;
 		padding: 0 40px 0 0;
+	}
+
+	@at-root .shop-sidebar-right#{&} {
+		#content {
+			float: left;
+			margin: 0 $size__site-sidebar 0 0;
+		}
+
+		.shop-widgets.widget-area {
+			float: right;
+			padding: 0 0 0 40px;
+		}
 	}
 }
 
