--- a/woocommerce.css
+++ b/woocommerce.css
@@ -14,6 +14,9 @@
       float: none;
       margin: 0;
       width: auto; } }
+  .shop-sidebar-right.woocommerce-page #container {
+    float: left;
+    margin: 0 -25.61404% 0 0; }
 
 .woocommerce-page .container #content {
   float: right;
@@ -31,6 +34,14 @@
 .woocommerce-page .container .shop-widgets.widget-area {
   float: left;
   padding: 0 40px 0 0; }
+
+.shop-sidebar-right.woocommerce-page .container #content {
+  float: left;
+  margin: 0 25.61404% 0 0; }
+
+.shop-sidebar-right.woocommerce-page .container .shop-widgets.widget-area {
+  float: right;
+  padding: 0 0 0 40px; }
 
 .woocommerce-page.single-product #container {
   float: none;
