--- a/woocommerce.css
+++ b/woocommerce.css
@@ -151,11 +151,11 @@
     .woocommerce .woocommerce-ordering .ordering-selector-wrapper svg {
       float: right;
       margin: 0 -3px 0 10px;
-      -webkit-transform: rotate(0deg);
-      -moz-transform: rotate(0deg);
-      -ms-transform: rotate(0deg);
-      -o-transform: rotate(0deg);
-      transform: rotate(0deg);
+      -webkit-transform: rotate(-90deg);
+      -moz-transform: rotate(-90deg);
+      -ms-transform: rotate(-90deg);
+      -o-transform: rotate(-90deg);
+      transform: rotate(-90deg);
       -webkit-transition: all 0.15s ease-in;
       -moz-transition: all 0.15s ease-in;
       transition: all 0.15s ease-in; }
@@ -163,15 +163,14 @@
         fill: #626262; }
     .woocommerce .woocommerce-ordering .ordering-selector-wrapper:hover {
       color: #2d2d2d; }
-      .woocommerce .woocommerce-ordering .ordering-selector-wrapper:hover .north-icon-next {
-        color: #2d2d2d;
-        -webkit-transform: rotate(90deg);
-        -moz-transform: rotate(90deg);
-        -ms-transform: rotate(90deg);
-        -o-transform: rotate(90deg);
-        transform: rotate(90deg); }
-      .woocommerce .woocommerce-ordering .ordering-selector-wrapper:hover path {
-        fill: #2d2d2d; }
+      .woocommerce .woocommerce-ordering .ordering-selector-wrapper:hover svg {
+        -webkit-transform: rotate(0deg);
+        -moz-transform: rotate(0deg);
+        -ms-transform: rotate(0deg);
+        -o-transform: rotate(0deg);
+        transform: rotate(0deg); }
+        .woocommerce .woocommerce-ordering .ordering-selector-wrapper:hover svg path {
+          fill: #2d2d2d; }
     .woocommerce .woocommerce-ordering .ordering-selector-wrapper .ordering-dropdown-container {
       left: -1px;
       min-height: 1px;
