--- a/sass/woocommerce/_layout.scss
+++ b/sass/woocommerce/_layout.scss
@@ -3,7 +3,12 @@
 	margin: 0 0 0 (-$size__site-sidebar);
 	width: $size__site-main;
 
-	@at-root .no-active-wc-sidebar.woocommerce-page #container {
+	@at-root .shop-sidebar-right#{&} {
+		float: left;
+		margin: 0 (-$size__site-sidebar) 0 0;
+	}
+
+	@at-root .no-active-wc-sidebar#{&} {
 		float: none;
 		margin: 0;
 		width: auto;
@@ -14,11 +19,6 @@
 		margin: 0;
 		width: auto;
 	}
-
-	@at-root .shop-sidebar-right#{&} {
-		float: left;
-		margin: 0 (-$size__site-sidebar) 0 0;
-	}
 }
 
 .woocommerce-page .container {
@@ -27,7 +27,12 @@
 		float: right;
 		margin: 0 0 0 $size__site-sidebar;
 
-		@at-root .no-active-wc-sidebar.woocommerce-page #content {
+		@at-root .shop-sidebar-right#{&} {
+			float: left;
+			margin: 0 $size__site-sidebar 0 0;
+		}
+
+		@at-root .no-active-wc-sidebar#{&} {
 			float: none;
 			margin: 0;
 			width: auto;
@@ -43,15 +48,8 @@
 	.shop-widgets.widget-area {
 		float: left;
 		padding: 0 40px 0 0;
-	}
 
-	@at-root .shop-sidebar-right#{&} {
-		#content {
-			float: left;
-			margin: 0 $size__site-sidebar 0 0;
-		}
-
-		.shop-widgets.widget-area {
+		@at-root .shop-sidebar-right#{&} {
 			float: right;
 			padding: 0 0 0 40px;
 		}
