Applying menu navigation css to menu only

--- a/sass/navigation/_menus.scss
+++ b/sass/navigation/_menus.scss
@@ -4,107 +4,107 @@
 
 	> div {
 		display: inline-block;
-	}
-
-	ul {
-		display: none;
-		list-style: none;
-		margin: 0;
-		padding-left: 0;
 
 		ul {
-			background: #fff;
-			box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
-			float: left;
-			opacity: 0;
-			padding: 0;
-			position: absolute;
-			top: 50px;
-			@include transition (all 0.1s ease-in-out);
-			@include transform-origin(center top);
-			@include transform( scaleY(0) );
-			visibility: hidden;
-			z-index: 99999;
+			display: none;
+			list-style: none;
+			margin: 0;
+			padding-left: 0;
 
 			ul {
-				left: 100%;
-				top: 0;
-			}
-
-			li {
+				background: #fff;
+				box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
+				float: left;
+				opacity: 0;
 				padding: 0;
+				position: absolute;
+				top: 50px;
+				@include transition (all 0.1s ease-in-out);
+				@include transform-origin(center top);
+				@include transform( scaleY(0) );
+				visibility: hidden;
+				z-index: 99999;
 
-				&:hover > ul,
-				&.focus > ul {
+				ul {
 					left: 100%;
+					top: 0;
 				}
 
-				&:last-child a {
-					border-bottom: 0;
+				li {
+					padding: 0;
+
+					&:hover > ul,
+					&.focus > ul {
+						left: 100%;
+					}
+
+					&:last-child a {
+						border-bottom: 0;
+					}
+				}
+
+				a {
+					border-bottom: 1px solid $color__background-hr;
+					font-family: $font__main;
+					@include font-size(0.8666);
+					letter-spacing: normal;
+					line-height: normal;
+					margin: 0 20px;
+					min-width: 150px;
+					padding: 15px 0;
+					text-transform: none;
+				}
+
+				:hover > a,
+				.focus > a {
+				}
+
+				a:hover,
+				a.focus {
 				}
 			}
+
+			li:hover,
+			li.focus {
+
+				> ul {
+					opacity: 1;
+					@include transform( scaleY(1) );
+					visibility: visible;
+				}
+			}
+		}
+
+		li {
+			float: left;
+			padding: 2px 45px 0 0;
+			position: relative;
 
 			a {
-				border-bottom: 1px solid $color__background-hr;
-				font-family: $font__main;
-				@include font-size(0.8666);
-				letter-spacing: normal;
-				line-height: normal;
-				margin: 0 20px;
-				min-width: 150px;
-				padding: 15px 0;
-				text-transform: none;
+				text-transform: uppercase;
+				color: $color__text-medium;
+				font-family: $font__details;
+				@include font-size(0.8);
+				letter-spacing: 1px;
+				line-height: 60px;
 			}
 
-			:hover > a,
-			.focus > a {
-			}
-
-			a:hover,
-			a.focus {
+			&:hover > a,
+			&.focus > a {
+				color: $color__text-dark;
 			}
 		}
-
-		li:hover,
-		li.focus {
-
-			> ul {
-				opacity: 1;
-				@include transform( scaleY(1) );
-				visibility: visible;
-			}
-		}
-	}
-
-	li {
-		float: left;
-		padding: 2px 45px 0 0;
-		position: relative;
 
 		a {
-			text-transform: uppercase;
-			color: $color__text-medium;
-			font-family: $font__details;
-			@include font-size(0.8);
-			letter-spacing: 1px;
-			line-height: 60px;
+			display: block;
+			text-decoration: none;
 		}
 
-		&:hover > a,
-		&.focus > a {
-			color: $color__text-dark;
+		.current_page_item > a,
+		.current-menu-item > a,
+		.current_page_ancestor > a,
+		.current-menu-ancestor > a {
 		}
-	}
-
-	a {
-		display: block;
-		text-decoration: none;
-	}
-
-	.current_page_item > a,
-	.current-menu-item > a,
-	.current_page_ancestor > a,
-	.current-menu-ancestor > a {
 	}
 }
 
@@ -185,7 +185,7 @@
 /*--------------------------------------------------------------
 ## Mobile Menu
 --------------------------------------------------------------*/
-.main-navigation ul {
+.main-navigation > div ul {
 	display: none;
 }
 
