--- a/style.css
+++ b/style.css
@@ -626,82 +626,82 @@ a {
     display: table; }
   .main-navigation > div {
     display: inline-block; }
-  .main-navigation ul {
-    display: none;
-    list-style: none;
-    margin: 0;
-    padding-left: 0; }
-    .main-navigation ul ul {
-      background: #fff;
-      box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
+    .main-navigation > div ul {
+      display: none;
+      list-style: none;
+      margin: 0;
+      padding-left: 0; }
+      .main-navigation > div ul ul {
+        background: #fff;
+        box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
+        float: left;
+        opacity: 0;
+        padding: 0;
+        position: absolute;
+        top: 50px;
+        -webkit-transition: all 0.1s ease-in-out;
+        -moz-transition: all 0.1s ease-in-out;
+        transition: all 0.1s ease-in-out;
+        -webkit-transform-origin: center top;
+        -moz-transform-origin: center top;
+        -ms-transform-origin: center top;
+        -o-transform-origin: center top;
+        transform-origin: center top;
+        -webkit-transform: scaleY(0);
+        -moz-transform: scaleY(0);
+        -ms-transform: scaleY(0);
+        -o-transform: scaleY(0);
+        transform: scaleY(0);
+        visibility: hidden;
+        z-index: 99999; }
+        .main-navigation > div ul ul ul {
+          left: 100%;
+          top: 0; }
+        .main-navigation > div ul ul li {
+          padding: 0; }
+          .main-navigation > div ul ul li:hover > ul,
+          .main-navigation > div ul ul li.focus > ul {
+            left: 100%; }
+          .main-navigation > div ul ul li:last-child a {
+            border-bottom: 0; }
+        .main-navigation > div ul ul a {
+          border-bottom: 1px solid #f4f4f4;
+          font-family: "Merriweather", serif;
+          font-size: 13.8656px;
+          font-size: 0.8666rem;
+          letter-spacing: normal;
+          line-height: normal;
+          margin: 0 20px;
+          min-width: 150px;
+          padding: 15px 0;
+          text-transform: none; }
+      .main-navigation > div ul li:hover > ul,
+      .main-navigation > div ul li.focus > ul {
+        opacity: 1;
+        -webkit-transform: scaleY(1);
+        -moz-transform: scaleY(1);
+        -ms-transform: scaleY(1);
+        -o-transform: scaleY(1);
+        transform: scaleY(1);
+        visibility: visible; }
+    .main-navigation > div li {
       float: left;
-      opacity: 0;
-      padding: 0;
-      position: absolute;
-      top: 50px;
-      -webkit-transition: all 0.1s ease-in-out;
-      -moz-transition: all 0.1s ease-in-out;
-      transition: all 0.1s ease-in-out;
-      -webkit-transform-origin: center top;
-      -moz-transform-origin: center top;
-      -ms-transform-origin: center top;
-      -o-transform-origin: center top;
-      transform-origin: center top;
-      -webkit-transform: scaleY(0);
-      -moz-transform: scaleY(0);
-      -ms-transform: scaleY(0);
-      -o-transform: scaleY(0);
-      transform: scaleY(0);
-      visibility: hidden;
-      z-index: 99999; }
-      .main-navigation ul ul ul {
-        left: 100%;
-        top: 0; }
-      .main-navigation ul ul li {
-        padding: 0; }
-        .main-navigation ul ul li:hover > ul,
-        .main-navigation ul ul li.focus > ul {
-          left: 100%; }
-        .main-navigation ul ul li:last-child a {
-          border-bottom: 0; }
-      .main-navigation ul ul a {
-        border-bottom: 1px solid #f4f4f4;
-        font-family: "Merriweather", serif;
-        font-size: 13.8656px;
-        font-size: 0.8666rem;
-        letter-spacing: normal;
-        line-height: normal;
-        margin: 0 20px;
-        min-width: 150px;
-        padding: 15px 0;
-        text-transform: none; }
-    .main-navigation ul li:hover > ul,
-    .main-navigation ul li.focus > ul {
-      opacity: 1;
-      -webkit-transform: scaleY(1);
-      -moz-transform: scaleY(1);
-      -ms-transform: scaleY(1);
-      -o-transform: scaleY(1);
-      transform: scaleY(1);
-      visibility: visible; }
-  .main-navigation li {
-    float: left;
-    padding: 2px 45px 0 0;
-    position: relative; }
-    .main-navigation li a {
-      text-transform: uppercase;
-      color: #626262;
-      font-family: "Lato", sans-serif;
-      font-size: 12.8px;
-      font-size: 0.8rem;
-      letter-spacing: 1px;
-      line-height: 60px; }
-    .main-navigation li:hover > a,
-    .main-navigation li.focus > a {
-      color: #2d2d2d; }
-  .main-navigation a {
-    display: block;
-    text-decoration: none; }
+      padding: 2px 45px 0 0;
+      position: relative; }
+      .main-navigation > div li a {
+        text-transform: uppercase;
+        color: #626262;
+        font-family: "Lato", sans-serif;
+        font-size: 12.8px;
+        font-size: 0.8rem;
+        letter-spacing: 1px;
+        line-height: 60px; }
+      .main-navigation > div li:hover > a,
+      .main-navigation > div li.focus > a {
+        color: #2d2d2d; }
+    .main-navigation > div a {
+      display: block;
+      text-decoration: none; }
 
 /*--------------------------------------------------------------
 ## Social and Search Icons
@@ -753,7 +753,7 @@ a {
 /*--------------------------------------------------------------
 ## Mobile Menu
 --------------------------------------------------------------*/
-.main-navigation ul {
+.main-navigation > div ul {
   display: none; }
 
 .menu-toggle {
