--- a/sass/woocommerce/_cart.scss
+++ b/sass/woocommerce/_cart.scss
@@ -401,6 +401,38 @@
 	}
 }
 
+#mobile-navigation {
+	.shopping-cart-link {
+		background: $color__background-light;
+		border-bottom: 1px solid $color__background-hr-dark;
+		color: $color__text-medium;
+		display: block;
+		font-family: $font__details;
+		@include font-size(0.8);
+		letter-spacing: .1em;
+		line-height: 42px;
+		padding: 0 10px;
+		position: relative;
+		width: 100%;
+		text-transform: uppercase;
+
+		svg {
+			height: 20px;
+			position: relative;
+			top: 4px;
+		}
+
+		.shopping-cart-count {
+			background: $color__primary-accent;
+			border-radius: 9px;
+			color: #fff;
+			font-size: 9px;
+			margin-left: 10px;
+			padding: 4px 5px;
+		}
+	}
+}
+
 .woocommerce {
 	.widget_shopping_cart_content {
 		.cart_list{
